# Sizalizer

./: .dockerignore  .gitignore  .gitmodules  Devbox.dockerfile  Dockerfile  README.md  compile_embench_iot.sh  compile_llvm.sh  compile_riscv-gnu-toolchain.sh  docker-compose.yml
analysis/: main.py
analysis/dynamic/: main.py
analysis/static/: main.py
example/: primes.c
llvm-pass-plugin/: CMakeLists.txt  Makefile  README.md  flake.nix  shell.nix
llvm-pass-plugin/src/: pass.cpp
